# bookops-shelfdog

./: .gitignore  README.md  dev-requirements.txt  pyproject.toml  pytest.ini  requirements.txt
shelfdog/: datastore.py
