[tool.poetry]
name = "bookops-shelfdog"
version = "0.1.0"
description = "BookOps cataloging quality control bot"
authors = ["Tomek <klingaroo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.40"
paramiko = "^2.11.0"
loggly-python-handler = "^1.0.1"
bookops-marc = {git = "https://github.com/BookOps-CAT/bookops-marc.git", rev = "0.8.1"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.8.0"
mypy = "^0.971"
pytest-cov = "^3.0.0"
pytest-sftpserver = "^1.3.0"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
    /(
        \.eggs
       | \.git
       | \.hg
       | \.mypy_cache
       | \.tox
       | \.venv
       | _build
       | buck-out
       | build
       | dist
    )/
    | temp.py
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
